src/test/ui/loops/loop-properly-diverging-2.stderr
error[E0308]: mismatched types
  --> $DIR/loop-properly-diverging-2.rs:2:23
   |
LL |   let x: i32 = loop { break };
   |                       ^^^^^ expected (), found i32
   |
   = note: expected type `()`
              found type `i32`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
